// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Render properties.disabled: true - value[0] 1`] = `
<ul
  className="ant-pagination ant-pagination-disabled"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Render properties.hideOnSinglePage: true, total: 1 - value[0] 1`] = `null`;

exports[`Render properties.hideOnSinglePage: true, total: 100 - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Render properties.pageSizeOptions: [100, 200, 500] - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-60"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={60}
  >
    <a
      rel="nofollow"
    >
      60
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-options"
  >
    <div
      className="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div
        className="ant-select-selector"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span
          className="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autoComplete="off"
            className="ant-select-selection-search-input"
            onChange={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onPaste={[Function]}
            readOnly={true}
            role="combobox"
            style={
              Object {
                "opacity": 0,
              }
            }
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          className="ant-select-selection-item"
          title="100"
        >
          100
        </span>
      </div>
      <span
        aria-hidden={true}
        className="ant-select-arrow"
        onMouseDown={[Function]}
        style={
          Object {
            "WebkitUserSelect": "none",
            "userSelect": "none",
          }
        }
        unselectable="on"
      >
        <span
          aria-label="down"
          className="anticon anticon-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`Render properties.showQuickJumper: true - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-options"
  >
    <div
      className="ant-pagination-options-quick-jumper"
    >
      Go to
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyUp={[Function]}
        type="text"
        value=""
      />
      
    </div>
  </li>
</ul>
`;

exports[`Render properties.showSizeChanger: true - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-options"
  >
    <div
      className="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div
        className="ant-select-selector"
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <span
          className="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autoComplete="off"
            className="ant-select-selection-search-input"
            onChange={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onPaste={[Function]}
            readOnly={true}
            role="combobox"
            style={
              Object {
                "opacity": 0,
              }
            }
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          className="ant-select-selection-item"
          title="10"
        >
          10
        </span>
      </div>
      <span
        aria-hidden={true}
        className="ant-select-arrow"
        onMouseDown={[Function]}
        style={
          Object {
            "WebkitUserSelect": "none",
            "userSelect": "none",
          }
        }
        unselectable="on"
      >
        <span
          aria-label="down"
          className="anticon anticon-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`Render properties.showTotal: true - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    className="ant-pagination-total-text"
  >
    1-10 of 100 items
  </li>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Render properties.simple: true - value[0] 1`] = `
<ul
  className="ant-pagination ant-pagination-simple"
  style={Object {}}
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-simple-pager"
    title="1/10"
  >
    <input
      onChange={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      size="3"
      type="text"
      value={1}
    />
    <span
      className="ant-pagination-slash"
    >
      /
    </span>
    10
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Render properties.size: default - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<ul
  className="ant-pagination mini"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-10"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={10}
  >
    <a
      rel="nofollow"
    >
      10
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Render properties.total - value[0] 1`] = `
<ul
  className="ant-pagination"
  style={Object {}}
  unselectable="unselectable"
>
  <li
    aria-disabled={true}
    className="ant-pagination-prev ant-pagination-disabled"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    title="Previous Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={true}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="left"
        className="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={1}
  >
    <a
      rel="nofollow"
    >
      1
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-2"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={2}
  >
    <a
      rel="nofollow"
    >
      2
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-3"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={3}
  >
    <a
      rel="nofollow"
    >
      3
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-4"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={4}
  >
    <a
      rel="nofollow"
    >
      4
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={5}
  >
    <a
      rel="nofollow"
    >
      5
    </a>
  </li>
  <li
    className="ant-pagination-jump-next ant-pagination-jump-next-custom-icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title="Next 5 Pages"
  >
    <a
      className="ant-pagination-item-link"
    >
      <div
        className="ant-pagination-item-container"
      >
        <span
          aria-label="double-right"
          className="anticon anticon-double-right ant-pagination-item-link-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
        <span
          className="ant-pagination-item-ellipsis"
        >
          •••
        </span>
      </div>
    </a>
  </li>
  <li
    className="ant-pagination-item ant-pagination-item-50"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
    title={50}
  >
    <a
      rel="nofollow"
    >
      50
    </a>
  </li>
  <li
    aria-disabled={false}
    className="ant-pagination-next"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    title="Next Page"
  >
    <button
      className="ant-pagination-item-link"
      disabled={false}
      tabIndex={-1}
      type="button"
    >
      <span
        aria-label="right"
        className="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </li>
</ul>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.disabled: true 1`] = `true`;

exports[`Test Schema properties.disabled: true 2`] = `null`;

exports[`Test Schema properties.hideOnSinglePage: true, total: 1 1`] = `true`;

exports[`Test Schema properties.hideOnSinglePage: true, total: 1 2`] = `null`;

exports[`Test Schema properties.hideOnSinglePage: true, total: 100 1`] = `true`;

exports[`Test Schema properties.hideOnSinglePage: true, total: 100 2`] = `null`;

exports[`Test Schema properties.pageSizeOptions: [100, 200, 500] 1`] = `true`;

exports[`Test Schema properties.pageSizeOptions: [100, 200, 500] 2`] = `null`;

exports[`Test Schema properties.showQuickJumper: true 1`] = `true`;

exports[`Test Schema properties.showQuickJumper: true 2`] = `null`;

exports[`Test Schema properties.showSizeChanger: true 1`] = `true`;

exports[`Test Schema properties.showSizeChanger: true 2`] = `null`;

exports[`Test Schema properties.showTotal: true 1`] = `true`;

exports[`Test Schema properties.showTotal: true 2`] = `null`;

exports[`Test Schema properties.simple: true 1`] = `true`;

exports[`Test Schema properties.simple: true 2`] = `null`;

exports[`Test Schema properties.size: default 1`] = `true`;

exports[`Test Schema properties.size: default 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.total 1`] = `true`;

exports[`Test Schema properties.total 2`] = `null`;
